# stac-fastapi

./: .dockerignore  .env.db.local  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.txt  CHANGES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  Dockerfile.mongo  LICENSE  Makefile  Pipfile  README.md  RELEASING.md  VERSION  alembic.ini  benchmarks.html  docker-compose.docs.yml  docker-compose.mongo.yml  docker-compose.nginx.yml  docker-compose.yml  index.html  mkdocs.yml  nginx.conf  objects.inv  pyproject.toml  pytest.ini  requirements.pgstac.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
alembic/: env.py
contributing/: index.html
docker/: Dockerfile.docs  Dockerfile.pgstac  Dockerfile.sqlalchemy  docker-compose.pgstac.yml  docker-compose.pgstac_pgadmin.yml  docker-compose.sqlalchemy.yml  servers.json
docs/: mkdocs.yml  tips-and-tricks.md
fastapi_stac/: api
fastapi_stac_api/: setup.py
get-started/: index.html
mongo_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-4062500658885691263.wt  collection-2-4062500658885691263.wt  collection-7-4062500658885691263.wt  index-1-4062500658885691263.wt  index-3-4062500658885691263.wt  index-8-4062500658885691263.wt  index-9-4062500658885691263.wt  sizeStorer.wt
stac_fastapi/api/: app.py  config.py  openapi.py  pyproject.toml  routes.py  setup.cfg  setup.py
stac_fastapi/api/stac_fastapi/api/: __init__.py  app.py  config.py  descriptions.py  errors.py  metrics.py  middleware.py  models.py  openapi.py  rfc3339.py  routes.py  settings.py  version.py
stac_fastapi/api/tests/: benchmarks.py  conftest.py  cors_support.py  test_api.py  test_app.py  test_app_prefix.py  test_cors.py  test_metrics.py  test_middleware.py  test_models.py  test_route_dependencies.py  util.py
stac_fastapi/extensions/: pyproject.toml  setup.cfg  setup.py
stac_fastapi/extensions/core/: context.py  transaction.py
stac_fastapi/extensions/core/fields/: fields.py
stac_fastapi/extensions/core/pagination/: __init__.py  token_pagination.py
stac_fastapi/extensions/core/query/: __init__.py  query.py
stac_fastapi/extensions/core/sort/: __init__.py  sort.py
stac_fastapi/extensions/stac_fastapi/extensions/: __init__.py  version.py
stac_fastapi/extensions/stac_fastapi/extensions/aggregation/: __init__.py  aggregation.py  client.py  request.py  types.py
stac_fastapi/extensions/stac_fastapi/extensions/bulk_transactions/: __init__.py  bulk_transactions.py
stac_fastapi/extensions/stac_fastapi/extensions/collection_search/: client.py  collection_search.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/core/: __init__.py  context.py  crs.py  fields.py  filter.py  query.py  sort.py  transaction.py
stac_fastapi/extensions/stac_fastapi/extensions/core/aggregation/: __init__.py  aggregation.py  client.py  request.py  types.py
stac_fastapi/extensions/stac_fastapi/extensions/core/bulk_transactions/: __init__.py
stac_fastapi/extensions/stac_fastapi/extensions/core/collectionSearch/: __init__.py  collectionSearch.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/core/collection_search/: __init__.py  client.py  collection_search.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/core/crs/: __init__.py  crs.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/core/discoverySearch/: __init__.py  discoverySearch.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/core/fields/: __init__.py  fields.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/core/filter/: __init__.py  client.py  filter.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/core/free_text/: __init__.py  free_text.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/core/multi_tenant_catalogs/: __init__.py  catalogs.py  client.py  types.py
stac_fastapi/extensions/stac_fastapi/extensions/core/pagination/: __init__.py  offset_pagination.py  pagination.py  request.py  token_pagination.py
stac_fastapi/extensions/stac_fastapi/extensions/core/query/: query.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/core/sort/: request.py  sort.py
stac_fastapi/extensions/stac_fastapi/extensions/core/transaction/: __init__.py  request.py  transaction.py
stac_fastapi/extensions/stac_fastapi/extensions/fields/: __init__.py  fields.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/filter/: __init__.py  client.py  filter.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/free_text/: free_text.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/multi_tenant_catalogs/: catalogs.py  client.py
stac_fastapi/extensions/stac_fastapi/extensions/pagination/: __init__.py  offset_pagination.py  pagination.py  request.py  token_pagination.py
stac_fastapi/extensions/stac_fastapi/extensions/query/: __init__.py  query.py  request.py
stac_fastapi/extensions/stac_fastapi/extensions/sort/: __init__.py  client.py  request.py  sort.py
stac_fastapi/extensions/stac_fastapi/extensions/transaction/: client.py  request.py  transaction.py
stac_fastapi/extensions/tests/: test_aggregation.py  test_bulk_transactions.py  test_catalogs.py  test_collection_search.py  test_fields.py  test_fields_request.py  test_filter.py  test_free_text.py  test_pagination.py  test_query.py  test_sort.py  test_sort_request.py  test_transaction.py
stac_fastapi/types/: core.py  errors.py  extension.py  links.py  pyproject.toml  setup.cfg  setup.py
stac_fastapi/types/stac_fastapi/types/: __init__.py  aggregation.py  backend.py  catalogs.py  config.py  conformance.py  core.py  extension.py  hierarchy.py  links.py  requests.py  response_model.py  rfc3339.py  search.py  stac.py  transaction.py  version.py
stac_fastapi/types/stac_fastapi/types/clients/: __init__.py  async_core.py  filter.py  hierarchy.py  landing.py  sync_core.py  transaction.py
stac_fastapi/types/tests/: test_config.py  test_limit.py  test_links.py  test_requests.py  test_response_model.py  test_rfc3339.py
(+466 files in other folders)
